src/plugins/styles/windowsvista/qwindowsvistastyle.cpp
@@ -4810,7 +4810,7 @@ void QWindowsVistaStyle::polish(QPalette &pal)
 {
     Q_D(QWindowsVistaStyle);
 
-    if (qApp->styleHints()->colorScheme() == Qt::ColorScheme::Dark) {
+    if (QGuiApplicationPrivate::colorScheme() == Qt::ColorScheme::Dark) {
         // System runs in dark mode, but the Vista style cannot use a dark palette.
         // Overwrite with the light system palette.
         using QWindowsApplication = QNativeInterface::Private::QWindowsApplication;
